[gd_scene load_steps=4 format=3 uid="uid://b6s25t3xxttat"]

[ext_resource type="PackedScene" uid="uid://xqigt823tg75" path="res://game_objects/enemies/battle_line.tscn" id="1_5g3ba"]
[ext_resource type="Script" path="res://game_objects/enemies/line_holder.gd" id="1_e3fqe"]
[ext_resource type="Resource" uid="uid://deswhayq4p0xv" path="res://game_objects/enemies/presets/base_battle.tres" id="2_13g25"]

[node name="LineHolder" type="Node2D"]
script = ExtResource("1_e3fqe")
battle = ExtResource("2_13g25")

[node name="Line" parent="." instance=ExtResource("1_5g3ba")]

[node name="Line2" parent="." instance=ExtResource("1_5g3ba")]
position = Vector2(276, 0)

[node name="Line3" parent="." instance=ExtResource("1_5g3ba")]
position = Vector2(552, 0)
